Убрал display: flex

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p> <input type="checkbox" id="diss" title=";p;"> Диссертация</p>
         <p> <input type="checkbox" id="nioktr" title=";p;"> НИОКТР</p>
         <p> <input type="checkbox" id="rid" title=";p;"> РИД</p>
-        <p> <input type="checkbox" id="nauch" title=";p;"> НАУЧНЫЙ ОТЧЕТ</p>
+        <p> <input type="checkbox" id="nauch" title=";p;"> Научный отчёт</p>
     </div>
     <div class="searchParametrs-2">
     <p>Сортировка по:</p>
@@ -20,12 +20,14 @@
         <option value="Релевантность">Релевантность</option>
         <option value="Количество просмотров">Количество просмотров</option>
     </select>
+    <p> Выбор ВУЗа: 
     <select name="sort" id="vuz-select">
         <option value="10184556">Кубгу</option>
         <option value="10192406">Кубгту</option>
         <option value="10178176">Кубгау</option>
         <option value="10109220">Кубгму</option>
     </select>
+    </p>
     
    
    </div>
