Добавил radar поле для сравнение анализа, которое зависит от диссетаций и тд

--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
 
 </div>
 
+<div class="analis">
 <div id="chart" class="chart-container" style="position: relative; ">
-    <p>Анализ Данных</p>
     <canvas id="myChart"></canvas>
+</div>
+<div id="chart2" class="chart2-container" style="position: relative; ">
+    <canvas id="myChart2"></canvas>
+</div>
 </div>
 
 
