изменил литерары с некоторых местах

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <option value="Релевантность">Релевантность</option>
         <option value="Количество просмотров">Количество просмотров</option>
     </select>
-    <p> Выбор ВУЗа: 
+    <p> Выбор вуза: 
     <select name="sort" id="vuz-select">
-        <option value="10184556">Кубгу</option>
-        <option value="10192406">Кубгту</option>
-        <option value="10178176">Кубгау</option>
-        <option value="10109220">Кубгму</option>
+        <option value="10184556">КубГУ</option>
+        <option value="10192406">КубГТУ</option>
+        <option value="10178176">КубГАУ</option>
+        <option value="10109220">КубГМУ</option>
     </select>
     </p>
     
